--- a/jair.bib
+++ b/jair.bib
@@ -536,3 +536,12 @@ year = {2012}
   pages={4},
   year={2013}
 }
+
+@inproceedings{voorhees1999trec,
+  title={The TREC-8 Question Answering Track Report.},
+  author={Voorhees, Ellen M and others},
+  booktitle={TREC},
+  volume={99},
+  pages={77--82},
+  year={1999}
+}
