--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -493,7 +493,7 @@ Each Wikipedia page is embedded in the page tag. First, we check if the title of
 
 We get inter-language link matrix using previously stored redirection links and inter-language links. If inter-language link points to the redirection we replace it with the redirection target link. It turns out that we obtain the matrix $M$ that is not symmetric, consequently the underlying graph is not symmetric. That means that existence of the inter-language link in one way (i.e. English to German) does not guarantee that there is an inter-language link in the reverse direction (German to English). To correct this we transform this matrix to symmetric by computing $M+M^T$ and obtaining an undirected graph. In the rare case that we have multiple links pointing from the document, we pick the first one that we encountered. This matrix enables us to build an alignment across all Wikipedia languages.
 
-\subsection{Experiments With Missing Alignment Data}
+\subsection{Experiments With Missing Alignment Data}\label{experiments:hubcca}
 
  In this subsection, we will investigate the empirical performance of CCA hub approach. We will demonstrate that this approach can be successfully applied even in the case of fully missing alignment information.
  To this purpose, we select a subset of Wikipedia languages containing three major languages, English--\emph{en} (hub language), Spanish--\emph{es}, Russian--\emph{ru}, and five minority (in the sense of Wikipedia sizes) languages, Slovenian--\emph{sl}, Piedmontese--\emph{pms}, Waray-Waray--\emph{war} (all with about 2 million native speakers), Creole--\emph{ht} (8 million native speakers), and Hindi--\emph{hi} (180 million native speakers). For preprocessing, we remove the documents that contain less than 20 different words (stubs) and remove words occurring in less than 50 documents as well as the top 100 most frequent words (in each language separately). We represent the documents as normalized TFIDF\cite{Salton88term-weightingapproaches} weighted vectors.
@@ -588,13 +588,18 @@ There is also have a problem with the quality of the test data. For example, if 
 \subsection{Evaluation Of Cross-Lingual Event Linking}
 In order to determine how accurately we can predict cluster equivalence, we performed two experiments in multi-lingual setting using English, German and Spanish language for which we had labelled data to evaluate the linking performance. In the first experiment, we tested how well  the individual approaches for cross-lingual article linking perform when used for linking the clusters about the same event. In the second experiment we tested how accurate is the prediction model when trained on different subsets of learning features. To evaluate the prediction accuracy for a given dataset we used 10-fold cross validation. In this technique, the dataset is partitioned into 10 folds, where 9 folds are used for training a model and the left-out fold is then used to test the accuracy of the model. The learning and testing process is repeated 10 times, each time with a different left-out fold.
 
-In Section~\ref{sec:models}, we  described three main algorithms for identifying similar articles in different languages. These algorithms were $k$-means, LSI and hub CCA. As a training set, we used common Wikipedia alignment for all three languages. To test which of these algorithms performed best, we performed the following test. Using each algorithm, we analyzed all articles in Event Registry to find the most similar articles in other languages. The values of the cross-lingual article linking features (\texttt{linkCount} and \texttt{avgSimScore}) were then recomputed for all annotated learning examples. A dataset with only these two features and the label was constructed and used to test how accurate prediction models can be induced using the data. The results of the experiment are shown in Table~\ref{table:linkingEvalAlgos}. The table shows for each of the algorithms the obtained classification accuracy, precision and recall. We can see that the most informative features for cluster linking are obtained using the hub CCA algorithm, while $k$-means performs the worse. Firstly we verified the Average (over language pairs) Mean Reciprocal Ranks (AMRR) performance of approaches by holding out $15000$ aligned test documents and using $300000$ aligned documents
-Furthermore, we inspected how number of features influences the accuracy of cluster linking. As we can see from Table~\ref{table:linkingEvalAlgos} choosing number of features vectors larger than $500$ barely effects linking performance, which is most likely due to overfitting. Moreover, we tested the performance of detecting large/small cluster linking, see Table~\ref{table:linkingEvalAlgosLargeSmall}.  As expected we obtained that it is harder to link small clusters and we need better retrieval. Hub CCA outperforms other methods in this sense also, probably as it has the best retrieval performance, see Figure~\ref{pic:AMRR}.
+% which method?
+In Section~\ref{sec:models}, we  described three main algorithms for identifying similar articles in different languages. These algorithms were $k$-means, LSI and hub CCA. As a training set, we used common Wikipedia alignment for all three languages. To test which of these algorithms performed best, we performed the following test. Using each algorithm, we analyzed all articles in Event Registry to find the most similar articles in other languages. The values of the cross-lingual article linking features (\texttt{linkCount} and \texttt{avgSimScore}) were then recomputed for all annotated learning examples. A dataset with only these two features and the label was constructed and used to test how accurate prediction models can be induced using the data. The results of the experiment are shown in Table~\ref{table:linkingEvalAlgos}. The table shows for each of the algorithms the obtained classification accuracy, precision and recall. We can see that the most informative features for cluster linking are obtained using the hub CCA algorithm, while $k$-means performs the worse. 
 
-To decide which method to use, we performed some further experiments. Firstly, we verified the AMRR (average of mean reciprocal ranks over all language pairs) performance of the different approaches on the  Wikipedia data by holding out $15000$ aligned test documents and using $300000$ aligned documents
- as the training set. Figure~\ref{pic:AMRR} shows AMRR score as the function of the number of feature vectors. It is clear that hub CCA outperforms LSI approach and K-means lags far behind when testing on Wikipedia data. The similar performance of the LSI and hub CCA for cluster linking can be explained by domain mismatch. We train and test our model  AMRR performance on the Wikipedia data, but in the end apply it to the news domain. Unfortunately, we do not have any readily available data for this domain so we were not able to test properly.
-Furthermore, we inspect how number of features influences the accuracy of cluster linking. As we can see from Table~\ref{table:linkingEvalAlgos} choosing number of features vectors larger than $500$ barely affects linking performance. That is probably due to overfitting. Moreover we tested the performance of detecting large/small cluster linking, see Table~\ref{table:linkingEvalAlgosLargeSmall}. Large clusters aggregate a lot of information, so the accuracy is not as important so long as we  assign articles to correct clusters. In the case of small clusters, we expect the  accuracy to matter more.  As expected, we obtained that it is harder to link small clusters and so require better retrieval accuracy. Hub CCA outperforms other methods in this sense, most likely since  it has the best retrieval performance, see Figure~\ref{pic:AMRR}. It is worth noting that added accuracy is also beneficial when we wish
-to choose good representatives of clusters. Therefore, we decided to use hub CCA for cluster linking.
+% AMMR experiments
+We also compared the proposed approaches on the task of Wikipedia mate retrieval (the same task as in Section~\ref{experiments:hubcca}). We computed the Average (over language pairs) Mean Reciprocal Rank (AMRR) \shortcite{voorhees1999trec}  performance of the different approaches on the  Wikipedia data by holding out $15000$ aligned test documents and using $300000$ aligned documents as the training set. The Figure~\ref{pic:AMRR} shows AMRR score as the function of the number of feature vectors. It is clear that hub CCA outperforms LSI approach and K-means lags far behind when testing on Wikipedia data. The hub CCA approach manages with $500$ features performam comparably to $LSI$ based approach with $1000$-features, which shows that the $CCA$ method can improve both model memory footprint as well as similarity computation time.
+  
+% number of topics?
+Furthermore, we inspected how the number of features (topics) influences the accuracy of cluster linking. As we can see from Table~\ref{table:linkingEvalAlgos} choosing number of features vectors larger than $500$ barely affects linking performance, which is in contrast with the fact that additional features helped improve AMMR, see Figure~\ref{pic:AMRR}. Such differences may have arisen due to different domains of training and testing (Wikipedia pages versus news articles).
+
+% cluster size?
+We also analyzed how cluster size influences the linking performance. The intuition is that clusters with large number of documents are easier to link, which can be seen in Table~\ref{table:linkingEvalAlgosLargeSmall}. Large clusters aggregate a lot of information, so the performance of the similarity model is not as important so long as we assign articles to correct clusters. In the case of small clusters, we expect the accuracy to matter more. Our experiments indicate that this is indeed the case: it is harder to link small clusters and better retrieval accuracy may matter more. Hub CCA outperforms other methods in this sense in terms of precision, which is consistent with its AMRR performance, see Figure~\ref{pic:AMRR}.
+It is worth noting that added accuracy is also beneficial when we wish to choose good representatives of clusters. Therefore, we decided to use hub CCA in the cluster linking component.
 
 %{\oldText{TODO:} add some explanation why this might be so.}
 %\emph{Andrej adds some tests, new experiment description graphs, and explanations for performance, done by Monday}
