--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -24,6 +24,8 @@
 
 \newcommand{\algInput}{\textbf{input:}}
 
+\newcommand{\primoz}[#1]{\textcolor{red}{#1}}
+
 \jairheading{x}{xxxx}{x-xx}{x/xx}{x/xx}
 \ShortHeadings{Cross-Lingual Document Similarity and Event Tracking}
 {Rupnik, Muhi\v{c}, Leban, Fortuna, \v{S}kraba \& Grobelnik}
@@ -174,23 +176,40 @@ The clustering of articles is done for each language separately -- English artic
 
 \section{Cross-lingual Document Similarity}\label{sec:crosslingual}
 \label{sec:crosslingual}
-Document similarity is an important component in techniques from text mining and natural language processing. Many techniques use the similarity as a black box, i.e., a kernel in Support Vector Machines. Comparison of documents (or other types of text snippets) in a monolingual setting is a well studied problem in the field of information retrieval \cite{Salton88term-weightingapproaches}. In this section we will first cover the related work on cross-lingual similarity models and then formally introduce the problem.
+Document similarity is an important component in techniques from text mining and natural language processing. Many techniques use the similarity as a black box, i.e., a kernel in Support Vector Machines. Comparison of documents (or other types of text snippets) in a monolingual setting is a well studied problem in the field of information retrieval \cite{Salton88term-weightingapproaches}. We first recount some system requirements, then review  related approaches to cross-lingual similarity models and then formally introduce the problem as well as our approach.
 
-\subsection{Related work}
+\primoz{we may want to move this out to the pipeline section}
+\subsection{System Requirements}
 
-In this section we will relate the method we use to other alternatives in the literature. We will first state some requirements for our system, which motivate our choice of focusing on a particular subset of approaches in the rest of the paper.
-
-The goal is to build a system that monitors global media and analyzes how events are being reported on. In our approach this boils down to two steps: tracking events separately in each language (based on language detection and an online clustering approach) and then connecting them. The pipeline needs to process millions of articles per day and perform billions of similarity computations each day. The system should support as many languages as possible. We focus on implementations that run on a single shared memory machine, as opposed to clusters of machines. This severely simplifies the software implementation and system maintenance.
+Our goal is to build a system that monitors global media and analyzes how events are being reported on. Our approach consists of two steps: tracking events separately in each language (based on language detection and an online clustering approach) and then connecting them. The pipeline must be able to process millions of articles per day and perform billions of similarity computations each day - implying that similarity computation should be highly scalable.  %The system should support as many languages as possible.
+ We focus on implementations that run on a single shared memory machine, as opposed to clusters of machines. This  simplifies implementation and system maintenance.
 To summarize, the following properties are desireable:
 \begin{itemize}
 \item \textbf{Training} - The training (building corss-lingual models) should scale to many languages and should be robust to the quality of training resources. The system should be able to take advantage of comparable corpus (as opposed to parallel translation based corpora), with missing data. Supporting a new language should be straightforward.
 \item \textbf{Operation efficiency} - The similarity computation should be fast - the system must be able to handle billions of similarity computations per day.
 \item \textbf{Operation cost} - The system should run on a strong shared machine server and not rely on paid services.
+\item \textbf{Implementation} - The system is straightforward to implement, with few parameters to tune.
+\end{itemize}
+We believe that a cross-lingual similarity component that meets such requirements is very desirable in a commercial setting, where several different costs have to be taken into consideration.
+
+
+\subsection{Related work}
+
+
+%In this section we will relate the method we use to other alternatives in the literature. We will first state some requirements for our system, which motivate our choice of focusing on a particular subset of approaches in the rest of the paper.
+
+
+The goal is to build a system that monitors global media and analyzes how events are being reported on. In our approach this boils down to two steps: tracking events separately in each language (based on language detection and an online clustering approach) and then connecting them. The pipeline needs to process millions of articles per day and perform billions of similarity computations each day. The system should support as many languages as possible. We focus on implementations that run on a single shared memory machine, as opposed to clusters of machines. This severely simplifies the software implementation and system maintenance.
+To summarize, the following properties are desireable:
+\begin{itemize}
+\item \textbf{Training} - The training (building corss-lingual models) should scale to many languages and should be robust to the quality of training resources. The system should be able to take advantage of comparable corpus (as opposed to parallel translation based corpora), with missing data. \primoz{We could say something more subject to moving this section}%Supporting a new language should be straightforward.
+\item \textbf{Efficiency} - The similarity computation should be fast - the system must be able to handle billions of similarity computations per day.
+\item \textbf{Cost} - The system should run on a strong shared machine server and not rely on paid services.
 \item \textbf{Implementation} - The system is simple to implement, with few parameters to tune.
 \end{itemize}
 We believe that a cross-lingual similarity component that meets such requirements is very desirable in a commercial setting, where several different costs have to be taken into consideration.
 
-There are three main families of approaches to cross-lingual similarity.
+There are four main families of approaches to cross-lingual similarity.
 \begin{itemize}
 \item \textbf{Translation} - The most obvious way to compare documents written in different languages is to use machine translation and perform monolingual similarity. One can use free tools such as Moses \shortcite{moses} or translation services, such as Google Translate\footnote{https://translate.google.com/}. There are two issues with such approaches: they solve a harder problem than needs to be solved and they are less robust to training resource quality - large sets of translated sentences are typically needed. Training Moses for languages with scarce linguistic resources is thus problematic. The issue with using online services such as Google Translate is that the APIs are limited and not free. The operation efficiency and cost requirements make translation based approaches less suited for our system.
 \item \textbf{Probabilistic topic models} -  There exist many variants to modelling documents in a language independent way by using probabilistic graphical models. The models include:  Joint Probabilistic Latent Semantic Analysis (JPLSA) \shortcite{platt2010translingual}, Coupled Probabilistic LSA (CPLSA) \cite{platt2010translingual}, Probabilistic Cross-Lingual LSA (PCLLSA)\cite{PCL_LSA} and Polylingual Topic Models (PLTM) \shortcite{polyLDA} which is a Bayesian version of PCLLSA. The methods (except for CPLSA) describe the multilingual document collections as samples from generative probabilistic models, with variations on the assumptions on the model structure. The topics represent latent variables that are used to generate observed variables (words), a process specific to each language. The parameter estimation is posed as an inference problem which is typically intractable and one usually solves it using approximate techniques. Most variants of solutions are based on Gibbs sampling or Variational Inference, which are nontrivial to implement and may require an experienced practitioner to apply. Furthermore, representing a new document as a mixture of topics is another potentially hard inference problem which must be solved.
@@ -199,23 +218,25 @@ There are three main families of approaches to cross-lingual similarity.
 
 \end{itemize}
 
-Based on the discussion above, we chose to focus on methods based on vector space models and linear embeddings. We propose a method that is more efficient than popular alternatives (a clustering based approach and latent semantic indexing), but is still simple to optimize and use.
+Based on our requirements in Section~\ref{} \primoz{System requirements}, we chose to focus on methods based on vector space models and linear embeddings. We propose a method that is more efficient than popular alternatives (a clustering based approach and latent semantic indexing), but is still simple to optimize and use.
 
 \subsection{Problem definition}\label{sec:tfidf}
-We will first describe how documents are represented as vectors and how to compare in a mono-lingual setting. We will then define a way to measure cross-lingual similarity that is natural for the models we consider.
+We will first describe how documents are represented as vectors and how to compare douments in a mono-lingual setting. We will then define a way to measure cross-lingual similarity that is natural for the models we consider.
 
 \textbf{Document representation.}
-Standard vector space model \cite{Salton88term-weightingapproaches} represents documents as vectors, where each term corresponds to word or phrase in a fixed vocabulary. More formally, document $d$ is represented by a vector $x \in \RR^n$, where $n$ corresponds to the size of the vocabulary, and vector elements $x_k$ correspond to the number of times term $k$ occurred in the document, also called \emph{term frequency} or $TF_k(d)$.
+The standard vector space model \cite{Salton88term-weightingapproaches} represents documents as vectors, where each term corresponds to word or phrase in a fixed vocabulary. Formally, document $d$ is represented by a vector $x \in \RR^n$, where $n$ corresponds to the size of the vocabulary, and vector elements $x_k$ correspond to the number of times term $k$ occurred in the document, also called \emph{term frequency} or $TF_k(d)$.
 
-We also used a term re-weighting scheme that adjusts for the fact that some words occur more frequently in general. A term weight should correspond to the importance of the term for the given corpus. The common weighting scheme is called \emph{Term Frequency Inverse Document Frequency} ($TFIDF$) weighting. An \emph{Inverse Document Frequency} ($IDF$) weight for the dictionary term $k$ is defined as $\log\left( \frac{N}{DF_k} \right)$, where $DF_k$ is the number of documents in the corpus which contain term $k$.  A document $TFIDF$ vector is its original vector multiplied element-wise by the weights.
-
+We also used a term re-weighting scheme that adjusts for the fact that some words occur more frequently in general. A term weight should correspond to the importance of the term for the given corpus. The common weighting scheme is called \emph{Term Frequency Inverse Document Frequency} ($TFIDF$) weighting. An \emph{Inverse Document Frequency} ($IDF$) weight for the dictionary term $k$ is defined as $\log\left( \frac{N}{DF_k} \right)$, where $DF_k$ is the number of documents in the corpus which contain term $k$.  Therefore we can definte a document's $TFIDF$ as
+$$ x_{ij}  := \frac{\mbox{term frequency in document } i}{\mbox{inverse document frequency of term } j}
+%A document $TFIDF$ vector is its original vector multiplied element-wise by the weights.
+%
 The $TFIDF$ weighted vector space model document representation corresponds to a map $\phi : \text{text} \rightarrow \RR^n$ defined by:
 $$\phi(d)_k = {TF}_k(d) \log\left( \frac{N}{{DF}_k}\right).$$
 
 \textbf {Mono-lingual similarity.}
 A common way of computing similarity between documents is \emph{cosine similarity},
 $$sim(d_1, d_2) = \frac{\langle \phi(d_1), \phi(d_2)\rangle}{\|\phi(d_1)\| \|\phi(d_2)\|},$$
-where $\langle \cdot,\cdot \rangle$ and $\|\cdot\|$ are standard inner product and Euclidean norm. Cosine similarity, and other related approaches, assumes that the similarity is reflected in the overlap of words, and as such works only when the documents $d_1$ and $d_2$ are written in the same language.
+where $\langle \cdot,\cdot \rangle$ and $\|\cdot\|$ are standard inner product and Euclidean norm. Cosine similarity, and other related approaches, assumes that the similarity is reflected in the overlap of words. This metric is only meaningful when the documents $d_1$ and $d_2$ are defined on the same space (e.g. have a comparable vocabulary or are written in the same language).
 
 \textbf {Cross-lingual similarity.}
 Processing a multilingual dataset results in several vector spaces with varying dimensionality, one for each language. The dimensionality of the vector space corresponding to the $i$-th language is denoted by $n_i$ and and the vector space model mapping is denoted by $\phi_i : \text{text} \rightarrow \RR^{n_i}$.
